# robot

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/firmware/: CMakeLists.txt  Connection.cpp  Connection.hpp  main.cpp
src/host/src/: main.rs
